--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <div class="max-w-6xl mx-auto px-4 grid md:grid-cols-2 gap-10 items-start">
       <div>
         <h2 class="text-3xl font-semibold">Let’s build something</h2>
-        <p class="mt-3 text-neutral-300">Email: <a class="text-brand-400 hover:text-brand-200" href="mailto:dinesh@example.com">dinesh@example.com</a></p>
+        <p class="mt-3 text-neutral-300">Email: <a class="text-brand-400 hover:text-brand-200" href="mailto:dineshcharydinu@gmail.com">dineshcharydinu@gmail.com</a></p>
         <div class="mt-3 flex gap-4 text-neutral-300">
           <!-- Social icons (replace # with links) -->
           <a href="#" aria-label="LinkedIn" class="hover:text-white" title="LinkedIn">
