--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
         </div>
       </div>
       <div class="relative fade">
-        <div class="aspect-[4/3] rounded-2xl border border-white/10 bg-gradient-to-br from-bg-800 to-bg-900 shadow-glass grid place-items-center">
-          <span class="text-neutral-400 text-sm">Add your photo or montage here (replace this block with an <img>).</span>
-        </div>
+        <div class="relative fade">
+  <img src="profile.jpg" alt="Dinesh Bhairoju" class="rounded-2xl border border-white/10 shadow-glass w-full object-cover" />
+</div>
       </div>
     </div>
   </section>
