--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       </div>
       <div class="relative fade">
         <div class="relative fade">
-  <img src="profile.jpg" alt="Dinesh Bhairoju" class="rounded-2xl border border-white/10 shadow-glass w-full object-cover" />
+  <img src="fed41148-60cd-44f6-bd9a-558e5aa41782.jpg" alt="Dinesh Bhairoju" class="rounded-2xl border border-white/10 shadow-glass w-full object-cover" />
 </div>
       </div>
     </div>
