--- a/index.html
+++ b/index.html
@@ -45,4 +45,287 @@
     overflow-x:hidden;
   }
 
-  /* 3D Canvas fills the hero*
+  /* 3D Canvas fills the hero */
+  #bg{
+    position:fixed; inset:0;
+    z-index:-1; /* behind content */
+    background: radial-gradient(1200px 800px at 50% -20%, #2d0f64, transparent 60%);
+  }
+
+  header.nav{
+    position:fixed; top:0; left:0; right:0;
+    height:64px; display:flex; align-items:center; justify-content:space-between;
+    padding:0 20px; z-index:10;
+    backdrop-filter: blur(10px);
+    background:linear-gradient(180deg, rgba(10,10,18,.65), rgba(10,10,18,.15));
+    border-bottom:1px solid var(--glass-border);
+  }
+  .brand{font-weight:800; letter-spacing:.3px}
+  .brand span{color:var(--accent)}
+  nav a{
+    color:var(--fg); text-decoration:none; margin:0 10px; font-weight:600; font-size:14px;
+    padding:8px 12px; border-radius:10px;
+  }
+  nav a:hover{background:var(--glass)}
+
+  /* Hero */
+  .hero{
+    min-height:92vh; display:grid; place-items:center; padding:120px 24px 64px;
+    text-align:center;
+  }
+  .hero .wrap{max-width:960px}
+  h1{font-size: clamp(36px, 7vw, 68px); margin:0 0 10px; line-height:1.08}
+  .gradient{
+    background:linear-gradient(135deg,var(--accent),var(--accent-2));
+    -webkit-background-clip:text; background-clip:text; color:transparent;
+  }
+  .lead{color:var(--muted); font-size: clamp(16px, 2.5vw, 20px)}
+  .cta{
+    display:inline-flex; gap:10px; align-items:center; margin-top:22px;
+    background:linear-gradient(135deg,var(--accent),var(--accent-2));
+    color:#fff; text-decoration:none; padding:12px 22px; border-radius:999px; font-weight:700;
+    box-shadow:0 12px 24px rgba(138,99,249,.25); transition:.25s transform, .25s box-shadow;
+  }
+  .cta:hover{transform: translateY(-2px); box-shadow:0 16px 32px rgba(138,99,249,.35)}
+
+  /* Sections */
+  section{max-width:1100px; margin:0 auto; padding:64px 20px}
+  h2{font-size: clamp(24px, 4vw, 36px); margin:0 0 16px}
+  .sub{color:var(--muted); margin:0 0 24px}
+
+  .grid{
+    display:grid; grid-template-columns:repeat(12, 1fr); gap:18px;
+  }
+  .card{
+    grid-column: span 12;
+    background:var(--glass); border:1px solid var(--glass-border);
+    border-radius:16px; padding:18px; backdrop-filter: blur(12px);
+    box-shadow: 0 10px 30px rgba(0,0,0,.25);
+  }
+  .card h3{margin:0 0 8px}
+  .meta{color:var(--muted); font-size:14px; margin:8px 0 12px}
+  .links a{color:#fff; text-decoration:none}
+  .links a:hover{text-decoration:underline}
+
+  .badges{display:flex; flex-wrap:wrap; gap:8px; padding:0; margin:8px 0 0; list-style:none}
+  .badges li{
+    background:#1b1b26; color:#d9d9ec;
+    padding:6px 10px; border-radius:8px; font-size:13px;
+  }
+
+  @media (min-width:780px){
+    .card.span-6{grid-column: span 6}
+    .card.span-4{grid-column: span 4}
+  }
+
+  footer{padding:40px 20px; text-align:center; color:var(--muted); border-top:1px solid var(--glass-border)}
+  a.inline{color:#cfc7ff}
+</style>
+</head>
+<body>
+
+<canvas id="bg" aria-hidden="true"></canvas>
+
+<header class="nav" role="navigation">
+  <div class="brand">Dinesh<span>.</span>Bh</div>
+  <nav>
+    <a href="#work">Work</a>
+    <a href="#skills">Skills</a>
+    <a href="#contact">Contact</a>
+  </nav>
+</header>
+
+<!-- HERO -->
+<section class="hero" id="home" aria-label="Intro">
+  <div class="wrap">
+    <h1>Building <span class="gradient">Growth Systems</span> with AI + Web</h1>
+    <p class="lead">
+      I’m <strong>Dinesh Bhairoju</strong> — AI-first Digital Marketer & Web Developer. I design automations, websites, and SEO strategies that drive measurable results.
+    </p>
+    <a class="cta" href="#work">See Projects ↓</a>
+  </div>
+</section>
+
+<!-- WORK -->
+<section id="work" aria-labelledby="work-title">
+  <h2 id="work-title">Selected Work</h2>
+  <p class="sub">Outcome-driven projects across automation, marketing ops, and web.</p>
+
+  <div class="grid">
+    <article class="card span-6">
+      <h3>AI Lead Gen Workflow</h3>
+      <p><strong>Result:</strong> 2.1× qualified leads in 6 weeks using n8n + Apify + Sheets.</p>
+      <p class="meta">Role: Automation · Stack: n8n · Apify · OpenAI · Google Sheets</p>
+      <p class="links">
+        <a href="#" target="_blank" rel="noopener">Case Study</a> ·
+        <a href="#" target="_blank" rel="noopener">Demo</a>
+      </p>
+    </article>
+
+    <article class="card span-6">
+      <h3>Agency Website Revamp</h3>
+      <p><strong>Result:</strong> +38% conversions in 30 days via faster UX, better copy, and SEO structure.</p>
+      <p class="meta">Role: Dev & SEO · Stack: WordPress · Elementor</p>
+      <p class="links">
+        <a href="#" target="_blank" rel="noopener">Before / After</a>
+      </p>
+    </article>
+
+    <article class="card span-4">
+      <h3>E-commerce Audits</h3>
+      <p><strong>Result:</strong> –22% CPA and +31% ROAS through analytics + landing tests.</p>
+      <ul class="badges"><li>GA4</li><li>Hotjar</li><li>Meta Ads</li><li>A/B</li></ul>
+    </article>
+
+    <article class="card span-4">
+      <h3>Content Engine</h3>
+      <p><strong>Result:</strong> 5× blog velocity with AI-assisted briefs + internal links.</p>
+      <ul class="badges"><li>ChatGPT</li><li>Sheets</li><li>Programmatic SEO</li></ul>
+    </article>
+
+    <article class="card span-4">
+      <h3>Local SEO System</h3>
+      <p><strong>Result:</strong> Top-3 pack in 45 days for key services; GMB and schema fixes.</p>
+      <ul class="badges"><li>GMB</li><li>Schema</li><li>Citations</li></ul>
+    </article>
+  </div>
+</section>
+
+<!-- SKILLS -->
+<section id="skills" aria-labelledby="skills-title">
+  <h2 id="skills-title">Skills</h2>
+  <p class="sub">A mix of marketing strategy, code, and automation.</p>
+  <ul class="badges">
+    <li>n8n</li><li>Apify</li><li>OpenAI</li><li>JavaScript</li><li>WordPress</li>
+    <li>Elementor</li><li>SEO</li><li>GA4</li><li>Automation</li><li>Analytics</li>
+  </ul>
+</section>
+
+<!-- CONTACT -->
+<section id="contact" aria-labelledby="contact-title">
+  <h2 id="contact-title">Let’s Work</h2>
+  <p class="sub">Open to freelance & collaborations.</p>
+  <p>Email: <a class="inline" href="mailto:dineshbhairoju@gmail.com">dineshbhairoju@gmail.com</a> ·
+     LinkedIn: <a class="inline" href="https://www.linkedin.com/in/" target="_blank" rel="noopener">Connect</a></p>
+  <a class="cta" href="mailto:dineshbhairoju@gmail.com">Start a Project →</a>
+</section>
+
+<footer>
+  © <span id="year"></span> Dinesh Bhairoju · Built with Three.js on GitHub Pages
+</footer>
+
+<!-- Three.js (CDN) -->
+<script src="https://unpkg.com/three@0.160.0/build/three.min.js"></script>
+
+<script>
+  // ===== 3D Scene =====
+  const canvas = document.getElementById('bg');
+  const scene = new THREE.Scene();
+  const camera = new THREE.PerspectiveCamera(60, innerWidth/innerHeight, 0.1, 100);
+  camera.position.set(0, 0, 6);
+
+  const renderer = new THREE.WebGLRenderer({ canvas, antialias:true, alpha:true });
+  renderer.setSize(innerWidth, innerHeight);
+  renderer.setPixelRatio(Math.min(devicePixelRatio, 2));
+  renderer.outputColorSpace = THREE.SRGBColorSpace;
+
+  // Lights
+  const dir = new THREE.DirectionalLight(0xffffff, 1.0); dir.position.set(3,3,2);
+  const amb = new THREE.AmbientLight(0x9999ff, 0.6);
+  scene.add(dir, amb);
+
+  // Glossy purple blob
+  const geo = new THREE.IcosahedronGeometry(1.5, 32);
+  const mat = new THREE.MeshStandardMaterial({
+    color: 0x8a63f9,
+    roughness: 0.2,
+    metalness: 0.4
+  });
+  const blob = new THREE.Mesh(geo, mat);
+  scene.add(blob);
+
+  // Gentle vertex noise (wobble)
+  const basePositions = geo.attributes.position.array.slice();
+  function wobble(t){
+    const pos = geo.attributes.position;
+    for(let i=0;i<pos.count;i++){
+      const ix = i*3, iy = ix+1, iz = ix+2;
+      pos.array[ix] = basePositions[ix]   * (1 + 0.03*Math.sin(t + ix*0.02));
+      pos.array[iy] = basePositions[iy]   * (1 + 0.03*Math.cos(t*0.8 + iy*0.015));
+      pos.array[iz] = basePositions[iz]   * (1 + 0.03*Math.sin(t*1.2 + iz*0.01));
+    }
+    pos.needsUpdate = true;
+    geo.computeVertexNormals();
+  }
+
+  // Starfield particles
+  const starGeo = new THREE.BufferGeometry();
+  const count = 500;
+  const positions = new Float32Array(count*3);
+  for (let i=0;i<count;i++){
+    positions[i*3+0] = (Math.random()-0.5)*20;
+    positions[i*3+1] = (Math.random()-0.5)*14;
+    positions[i*3+2] = (Math.random()-0.2)*-8 - 2; // mainly behind
+  }
+  starGeo.setAttribute('position', new THREE.BufferAttribute(positions, 3));
+  const starMat = new THREE.PointsMaterial({ color:0xbba7ff, size:0.02, transparent:true, opacity:0.8 });
+  const stars = new THREE.Points(starGeo, starMat);
+  scene.add(stars);
+
+  // Mouse parallax
+  let mx=0,my=0, tx=0,ty=0;
+  window.addEventListener('pointermove', (e)=>{
+    mx = (e.clientX / innerWidth  - 0.5) * 2;
+    my = (e.clientY / innerHeight - 0.5) * 2;
+  });
+
+  // Animate
+  let t=0;
+  function tick(){
+    t += 0.01;
+    wobble(t);
+    blob.rotation.y += 0.004;
+    blob.rotation.x = Math.sin(t*0.5)*0.15;
+
+    // smooth camera offset
+    tx += (mx - tx)*0.04;
+    ty += (my - ty)*0.04;
+    camera.position.x = tx * 0.8;
+    camera.position.y = -ty * 0.6;
+    camera.lookAt(0,0,0);
+
+    stars.rotation.y += 0.0008;
+
+    renderer.render(scene, camera);
+    requestAnimationFrame(tick);
+  }
+  tick();
+
+  // Resize
+  addEventListener('resize', ()=>{
+    camera.aspect = innerWidth/innerHeight;
+    camera.updateProjectionMatrix();
+    renderer.setSize(innerWidth, innerHeight);
+    renderer.setPixelRatio(Math.min(devicePixelRatio, 2));
+  });
+
+  // Year
+  document.getElementById('year').textContent = new Date().getFullYear();
+</script>
+
+<!-- JSON-LD -->
+<script type="application/ld+json">
+{
+  "@context":"https://schema.org",
+  "@type":"Person",
+  "name":"Dinesh Bhairoju",
+  "url":"https://dineshbhairoju.github.io/",
+  "jobTitle":"Digital Marketer & Web Developer",
+  "sameAs":[
+    "https://github.com/dineshbhairoju",
+    "https://www.linkedin.com/in/"
+  ]
+}
+</script>
+</body>
+</html>
