--- a/index.html
+++ b/index.html
@@ -138,13 +138,19 @@
 <!-- HERO -->
 <section class="hero" id="home" aria-label="Intro">
   <div class="wrap">
-    <h1>Building <span class="gradient">Growth Systems</span> with AI + Web</h1>
+
+    <img src="dinesh.jpg" alt="Dinesh Bhairoju portrait" class="avatar" />
+
+    <h1>Hey, I'm <span class="gradient">Dinesh Bhairoju</span></h1>
     <p class="lead">
-      I’m <strong>Dinesh Bhairoju</strong> — AI-first Digital Marketer & Web Developer. I design automations, websites, and SEO strategies that drive measurable results.
+      AI-first Digital Marketer & Web Developer — I help startups scale using
+      <strong>automation, performance marketing,</strong> and <strong>AI-powered content systems.</strong>
     </p>
-    <a class="cta" href="#work">See Projects ↓</a>
+
+    <a class="cta" href="#work">See My Projects ↓</a>
   </div>
 </section>
+
 
 <!-- WORK -->
 <section id="work" aria-labelledby="work-title">
