--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 <section class="hero" id="home" aria-label="Intro">
   <div class="wrap">
 
-    <img src="dinesh.jpg" alt="Dinesh Bhairoju portrait" class="avatar" />
+    <img src="fed41148-60cd-44f6-bd9a-558e5aa41782.jpg" alt="Dinesh Bhairoju portrait" class="avatar" />
 
     <h1>Hey, I'm <span class="gradient">Dinesh Bhairoju</span></h1>
     <p class="lead">
