--- a/index.html
+++ b/index.html
@@ -221,7 +221,23 @@
 </footer>
 
 <!-- Three.js (CDN) -->
-<script src="https://unpkg.com/three@0.160.0/build/three.min.js"></script>
+<!-- JSON-LD -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Dinesh Bhairoju",
+  "url": "https://dineshbhairoju.github.io/",
+  "image": "https://dineshbhairoju.github.io/dinesh.jpg",
+  "jobTitle": "Digital Marketer & Web Developer",
+  "email": "mailto:dineshcharydinu@gmail.com",
+  "sameAs": [
+    "https://github.com/dineshbhairoju",
+    "https://www.linkedin.com/in/Dineshbhairoju/"
+  ]
+}
+</script>
+
 
 <script>
   // ===== 3D Scene =====
