--- a/index.html
+++ b/index.html
@@ -144,11 +144,10 @@
      class="avatar" width="140" height="140" loading="eager" />
 
 
-    <h1>Hey, I'm <span class="gradient">Dinesh Bhairoju</span></h1>
-    <p class="lead">
-      AI-first Digital Marketer & Web Developer — I help startups scale using
-      <strong>automation, performance marketing,</strong> and <strong>AI-powered content systems.</strong>
-    </p>
+   <p class="type-wrap" aria-live="polite">
+  <span id="typewriter" class="type"></span>
+  <span class="cursor" aria-hidden="true">|</span>
+</p>
 
     <a class="cta" href="#work">See My Projects ↓</a>
   </div>
