--- a/index.html
+++ b/index.html
@@ -367,6 +367,55 @@
     });
   }
 </script>
+<script>
+(function(){
+  const el = document.getElementById('typewriter');
+  if (!el) return;
+
+  // Phrases to cycle through — edit these to your liking
+  const messages = [
+    'AI Marketer',
+    'Web Developer',
+    'Automation Expert',
+    'SEO & Analytics',
+    'No-Code Builder (n8n, Apify)'
+  ];
+
+  const typeSpeed = 70;     // ms per character typed
+  const eraseSpeed = 45;    // ms per character erased
+  const holdTime   = 1200;  // pause when full word is shown
+
+  let msgIndex = 0;
+  let charIndex = 0;
+  let typing = true;        // typing or deleting state
+
+  function tick(){
+    const current = messages[msgIndex];
+
+    if (typing){
+      charIndex++;
+      el.textContent = current.slice(0, charIndex);
+      if (charIndex === current.length){
+        typing = false;
+        return setTimeout(tick, holdTime);
+      }
+      return setTimeout(tick, typeSpeed);
+    } else {
+      charIndex--;
+      el.textContent = current.slice(0, charIndex);
+      if (charIndex === 0){
+        typing = true;
+        msgIndex = (msgIndex + 1) % messages.length;
+        return setTimeout(tick, 300);
+      }
+      return setTimeout(tick, eraseSpeed);
+    }
+  }
+
+  // Start the loop
+  tick();
+})();
+</script>
 
 </body>
 </html>
